--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -76,6 +76,8 @@
     width: 180px;
     color: white;
     font-size: 20px;
+    margin: 0px 0px 0px 35px;
+    padding: 10px;
     cursor: pointer;
     &:hover {
         font-size: 25px;
